@@ -1,3 +1,8 @@
+*----------------------- qui 05 jul 2018 21:16:48 -03 -----------------------*
+
+- várias correções
+- remove cobrancabnb
+- limpeza geral
 *----------------------- qua 04 jul 2018 21:33:30 -03 -----------------------*
 
 - correção no multilib
